Second Project calci

--- a/src/app/landing-page/components/common-card/common-card.component.html
+++ b/src/app/landing-page/components/common-card/common-card.component.html
@@ -1,6 +1,6 @@
-<mat-card class="example-card" [routerLink]="['/crypto']" style="cursor: pointer;">
+<mat-card class="example-card" routerLink={{routeLink}} style="cursor: pointer;">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
+      <div mat-card-avatar class={{className}}></div>
       <mat-card-title>{{title}}</mat-card-title>
       <mat-card-subtitle>{{sub}}</mat-card-subtitle>
     </mat-card-header>
