--- a/src/app/landing-page/components/common-card/common-card.component.scss
+++ b/src/app/landing-page/components/common-card/common-card.component.scss
@@ -1,9 +1,10 @@
 .example-card {
-    max-width: 400px;
-    max-height: 400px;;
+    width: 300px;
+    height: 300px;
+    margin-right: 3em;
   }
   
-  .example-header-image {
+  .example-header-image1 {
     background-image: url(../../../../assets/no1.jpg);
     background-size: cover;
   }
