--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,10 +1,10 @@
 <h1>List of Applications</h1>
 
-<div style="display: flex;">
+<div style="display: flex; flex-flow: wrap; align-items: center; justify-content: center; overflow: hidden;">
  
 <app-common-card [routeLink]="'/crypto'" [title]="'Crypto'" [sub]="'Copyright ©TARA'" [description]="cryptoDes" [className]="'example-header-image1'"></app-common-card>
 
-<app-common-card [routeLink]="'/calci'" [title]="'Calculator'" [sub]="'Copyright ©TARA'" [description]="'Basic Calculator'" [className]="'example-header-image1'"></app-common-card>
+<app-common-card [routeLink]="'/calci'" [title]="'Calculator'" [sub]="'Copyright ©TARA'" [description]="'Basic Calculator'" [className]="'example-header-image2'"></app-common-card>
 
    
 </div>
