--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body::-webkit-scrollbar {
+    width: 7px !important;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: rgb(10, 226, 255) !important;
+    outline: 1px solid rgb(93, 245, 56) !important;
+  }
