--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -10,13 +10,20 @@
             </mat-grid-tile>
         </mat-grid-list>
         <mat-accordion style="position: absolute; z-index: 1; width: 90%; top: 20%;" class="example-box" cdkDrag>
-            <mat-expansion-panel style="width: 100%;">
-              <mat-expansion-panel-header>
+            <mat-expansion-panel style="width: 100%;" hideToggle (opened)="panelOpenState = true"
+            (closed)="panelOpenState = false">
+              <mat-expansion-panel-header  #panelH (click)="panelH._toggle()">
+                <div class="example-handle" cdkDragHandle (click)="panelH._toggle()">
+                    <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                      <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                    </svg>
+                </div>
                 <mat-panel-title>
                   History
                 </mat-panel-title>
                 <mat-panel-description>
-                  Past Calculations
+                  <button (click)="panelH._toggle()" mat-stroked-button>{{panelOpenState ? 'Hide Calculations' : 'Show Calculations'}}</button>
                 </mat-panel-description>
               </mat-expansion-panel-header>
               <div *ngFor="let a of allCalculations?.reverse()" style="display: flex; justify-content: end; border: 1px rgb(241, 238, 238) dotted; padding: 12px;">
