--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -53,3 +53,12 @@ mat-card{
     width: 24px;
     height: 24px;
   }
+
+  .resultClass{
+    position: absolute;
+    right: 0;
+    top: 0px;
+    border: 2px rgb(172, 255, 255) solid;
+    border-radius: 50%;
+    padding: 4px;
+  }
